--- a/static/css/main.css
+++ b/static/css/main.css
@@ -209,3 +209,15 @@ h2.monospace {
 .subtitle {
   opacity: 0.5;
 }
+
+.btn-delete {
+	color: #fff;
+	background-color: rgb(255, 78, 46);
+	border-color: rgb(255, 78, 46);
+	border: 1px solid transparent;
+	padding: 10px 16px;
+	margin-left: 8px;
+  font-size: 18px;
+	line-height: 1.3333333;
+  border-radius: 6px;
+}
