--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -94,6 +94,42 @@ block content %}
 <a href="/venues/{{ venue.id }}/edit"
   ><button class="btn btn-primary btn-lg">Edit</button></a
 >
-<button class="btn-delete">Delete</button>
+
+<!-- CSRF token -->
+<input type="hidden" id="csrf_token" value="{{ csrf_token() }}" />
+
+<button class="btn-delete" data-id="{{ venue.id }}">Delete</button>
+
+<script>
+  document.addEventListener("DOMContentLoaded", (event) => {
+    const csrfToken = document.getElementById("csrf_token").value;
+    document
+      .querySelector(".btn-delete")
+      .addEventListener("click", function () {
+        const venueId = this.getAttribute("data-id");
+
+        if (confirm("Are you sure you want to do this?")) {
+          fetch(`/venues/${venueId}`, {
+            method: "DELETE",
+            headers: {
+              "Content-Type": "application/json",
+              "X-CSRFToken": csrfToken,
+            },
+          })
+            .then((response) => {
+              if (response.ok) {
+                window.location.href = "/";
+              } else {
+                alert("All done.");
+              }
+            })
+            .catch((error) => {
+              console.error("Error", error);
+              alert("An error occured while deleting the venue.");
+            });
+        }
+      });
+  });
+</script>
 
 {% endblock %}
