--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -65,7 +65,7 @@ block content %}
         <h5>
           <a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a>
         </h5>
-        <h6>{{ show.start_time|datetime('full') }}</h6>
+        <h6>{{ show.start_time }}</h6>
       </div>
     </div>
     {% endfor %}
