--- a/templates/pages/show_artist.html
+++ b/templates/pages/show_artist.html
@@ -77,7 +77,7 @@ endblock %} {% block content %}
       <div class="tile tile-show">
         <img src="{{ show.venue_image_link }}" alt="Show Venue Image" />
         <h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
-        <h6>{{ show.start_time|datetime('full') }}</h6>
+        <h6>{{ show.start_time }}</h6>
       </div>
     </div>
     {% endfor %}
